# scopus-client

./: README.md  pyproject.toml
scripts/: test.sh
src/scopus_client/: __init__.py  _mutable_cycle.py  scopus_client.py
tests/: test_client.py  test_mutable_cycle.py
